welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
}


def faireTroisLignes()
{
  for (nbLigne<-1 to 9)
  {
    faireLigne()
  }
}


def faireLigne()
{
  for (nombre<-1 to 9)
  {
    faireMotif()
    for (pas<-1 to 7)
    {
      avance()
    }
  }
  gauche()
  for (pas<-1 to 7)
  {
    avance()
  }
  droite()
}


def faireMotif()
{
  for (nbOcurrence <-1 to 4)
  {
    faireV()
  }
}
